--- a/SpiralCreator_3.csproj
+++ b/SpiralCreator_3.csproj
@@ -32,13 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="accoremgd">
-      <HintPath>..\..\..\..\..\Program Files\Autodesk\AutoCAD 2023\accoremgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\Program Files\Autodesk\AutoCAD 2024\accoremgd.dll</HintPath>
     </Reference>
     <Reference Include="acdbmgd">
-      <HintPath>..\..\..\..\..\Program Files\Autodesk\AutoCAD 2023\acdbmgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\Program Files\Autodesk\AutoCAD 2024\acdbmgd.dll</HintPath>
     </Reference>
     <Reference Include="acmgd">
-      <HintPath>..\..\..\..\..\Program Files\Autodesk\AutoCAD 2023\acmgd.dll</HintPath>
+      <HintPath>..\..\..\..\..\Program Files\Autodesk\AutoCAD 2024\acmgd.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,6 +54,7 @@
     <Compile Include="Calc.cs" />
     <Compile Include="CenterPole.cs" />
     <Compile Include="Command.cs" />
+    <Compile Include="EntityCollection.cs" />
     <Compile Include="ICalc.cs" />
     <Compile Include="IGeometry.cs" />
     <Compile Include="IInit.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="IOutput.cs" />
     <Compile Include="ITweaks.cs" />
     <Compile Include="IValidation.cs" />
+    <Compile Include="MidLanding.cs" />
     <Compile Include="Output.cs" />
     <Compile Include="Params.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
