--- a/SpiralCreator_3.csproj
+++ b/SpiralCreator_3.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -75,6 +76,7 @@
     <Compile Include="TopLanding.cs" />
     <Compile Include="Tread.cs" />
     <Compile Include="Tweaks.cs" />
+    <Compile Include="ValidatedStairInput.cs" />
     <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
