--- a/SpiralCreator_3.csproj
+++ b/SpiralCreator_3.csproj
@@ -69,6 +69,9 @@
     <Compile Include="ITweaks.cs" />
     <Compile Include="IValidation.cs" />
     <Compile Include="MidLanding.cs" />
+    <Compile Include="MidLandingPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Output.cs" />
     <Compile Include="Params.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
